# Website-Orchestrator

./: .env.example  .gitignore  FINAL_MILESTONE_IMPLEMENTATION_MAP.md  MILESTONE_1.md  MILESTONE_2.md  MILESTONE_4.md  MILESTONE_4_IMPLEMENTATION_MAP.md  MILESTONE_4_PROGRESS.md  MILESTONE_5_IMPLEMENTATION_MAP.md  MILESTONE_6_IMPLEMENTATION_MAP.md  POSTGRES_VALIDATION_STATUS.md  PYTEST_FIX_SUMMARY.md  PYTEST_ROOT_INVOCATION.md  README.md  RUN_POSTGRES_TESTS.md  SAAS_IMPLEMENTATION_MAP.md  SEO_TOOLS_INTEGRATION_MAP.md  TASK_1.3_SUMMARY.md  _write_api.py  conftest.py  directory_tree.txt  docker-compose.yml  pyproject.toml
.kiro/specs/website-orchestrator-milestone-0/: .config.kiro  requirements.md  tasks.md
.kiro/steering/: autonomous-marketing-executive.md  checkpoint-verification.md
apps/api/: cli.py  pyproject.toml
apps/e2e/: pyproject.toml
apps/e2e/e2e/: __init__.py  fetcher.py  fixtures.py  mock_wordpress.py
apps/e2e/tests/: test_e2e_loop.py  test_harness.py
apps/web-admin/: package-lock.json  package.json
apps/web-admin/src/: components.tsx
apps/web-admin/src/__tests__/: admin.test.tsx
apps/web-analytics/: package-lock.json  package.json
apps/web-analytics/src/: components.tsx
apps/web-analytics/src/__tests__/: analytics.test.tsx
apps/web-automation/: package-lock.json  package.json
apps/web-automation/src/: components.tsx
apps/web-automation/src/__tests__/: automation.test.tsx
apps/web-collab/: package-lock.json  package.json  tsconfig.json
apps/web-collab/src/: components.tsx
apps/web-collab/src/__tests__/: collab.test.tsx
apps/web-workspace/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web-workspace/src/: AICopilotPanel.tsx  App.tsx  CommandPalette.tsx  api.ts  components.tsx  index.css
apps/web-workspace/src/__tests__/: workspace.test.tsx
apps/web-workspace/src/components/: PremiumUI.tsx
apps/web-workspace/src/pages/: Agentic.tsx  Analytics.tsx  AuditLog.tsx  Automation.tsx  Billing.tsx  Collaboration.tsx  Crawler.tsx  Dashboard.tsx  Enterprise.tsx  Fixes.tsx  Issues.tsx  KnowledgeGraph.tsx  Marketplace.tsx  SEO.tsx  Settings.tsx  Workspace.tsx
scripts/: check_wp_connection.py
semantic-review/: 2026-07-16-114017-pr-0.md
