# apps/e2e — the Requirement 11 end-to-end proof of the loop.
#
# Drives the full Observe -> Execute -> Verify loop against a local Fixture_Site,
# a local PostgreSQL datastore, and a mocked WordPress client. As a test harness
# it composes the whole system, so it depends on the API and every subsystem.
[project]
name = "wo-e2e"
version = "0.1.0"
description = "End-to-end proof of the loop against local fixtures and a mocked WordPress client."
requires-python = ">=3.11"
dependencies = [
    "wo-core",
    "wo-api",
    "wo-crawler",
    "wo-digital-twin",
    "wo-check-engine",
    "wo-fix-generator",
    "wo-publishing-adapter",
    "wo-governance",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["e2e"]

[tool.uv.sources]
wo-core = { workspace = true }
wo-api = { workspace = true }
wo-crawler = { workspace = true }
wo-digital-twin = { workspace = true }
wo-check-engine = { workspace = true }
wo-fix-generator = { workspace = true }
wo-publishing-adapter = { workspace = true }
wo-governance = { workspace = true }
